[package]
name         = "dedoc"
version      = "0.2.2"
description  = "Terminal-based viewer for DevDocs documentation"
repository   = "https://github.com/toiletbril/dedoc"
authors      = ["toiletbril"]
readme       = "README.md"

edition      = "2021"
rust-version = "1.66"

license      = "GPL-3.0"
keywords     = ["docs", "cli"]

[profile.release]
opt-level = 3
panic     = "abort"
strip     = true
lto       = true

[profile.profile]
inherits = "release"
panic    = "unwind"
strip    = false
debug    = true

[dependencies]
toiletcli     = { version = "0.10.0", default-features = false, features = ["colors", "flags"] }
attohttpc     = { version = "0.26.1", default-features = false, features = ["tls"] }
serde         = { version = "1.0.188", features = ["derive"] }
serde_json    = "1.0.106"
html2text     = "0.6.0"
terminal_size = "0.3.0"
