[package]
name        = "dedoc"
version     = "0.2.7"
description = "Terminal-based viewer for DevDocs documentation"
repository  = "https://github.com/toiletbril/dedoc"
authors     = ["toiletbril"]
readme      = "README.md"

edition      = "2021"
rust-version = "1.66"

license  = "GPL-3.0"
keywords = ["docs", "cli"]

[profile.release]
opt-level = 3
panic     = "abort"
strip     = true
lto       = true

[profile.profile]
inherits = "release"
panic    = "unwind"
strip    = false
debug    = true

[dependencies]
toiletcli     = { version = "0.12.3", default-features = false, features = ["colors", "escapes", "flags"] }
serde         = { version = "1.0.204", features = ["derive"] }
libc          = "0.2.148"
serde_json    = "1.0.120"
html2text     = "0.12.5"
terminal_size = "0.3.0"
ureq          = "2.10.1"
